--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.3",
     "nodemon": "^3.0.1"
   }
